# HR_MosProm

./: README.md  docker-compose.yml
back-end/: .env  Dockerfile  pyproject.toml
back-end/alembic/: env.py
back-end/alembic/versions/: 6f303bcaec29_init_schema.py
back-end/app/: .gitignore  configuration.py  main.py
back-end/app/db/: __init__.py  di.py
back-end/app/db/repositories/: __init__.py
back-end/src/: configuration.py  di.py  main.py
back-end/src/api/: __init__.py
back-end/src/api/v1/: __init__.py  user.py  utils.py
back-end/src/db/: __init__.py  database.py  di.py
back-end/src/db/models/: __init__.py  account.py  base.py  company.py  contacts.py  enums.py  response.py  university.py  university_request.py  vacancy.py
back-end/src/db/repositories/: __init__.py  account_repo.py  base_repo.py  company_repo.py  contacts_repo.py  response_repo.py  university_repo.py  university_request_repo.py  vacancy_repo.py
back-end/src/schemas/: error_responses.py  user.py
buildfiles/: backend.dockerfile  redis.conf
front-end/: nuxt.config.ts  package-lock.json  package.json
front-end/app/: app.vue
front-end/app/assets/styles/: global.scss  variables.scss
front-end/app/components/job/: ActionBar.vue  AppSidebar.vue  JobCard.vue
front-end/app/components/json/: vuzi.json
front-end/app/components/login/: login.vue
front-end/app/components/news/: NewsCard.vue
front-end/app/components/placeholder/: Placeholder.vue
front-end/app/components/sidebar/: AppSidebar.vue
front-end/app/pages/: Home.vue  Login.vue  index.vue  news.vue  placeholder.vue
(+6 files in other folders)
